[workspace]
resolver = "2"
members = [
  "crates/build_id2",
  "crates/core_affinity2",
  "crates/exceptional",
  "crates/fast_rands",
  "crates/libafl_asan",
  "crates/libafl_asan/libafl_asan_fuzz",
  "crates/libafl_asan/libafl_asan_libc",
  "crates/libafl_bolts",
  "crates/libafl_cc",
  "crates/libafl_concolic/symcc_libafl",
  "crates/libafl_concolic/symcc_runtime",
  "crates/libafl_concolic/test/dump_constraints",
  "crates/libafl_concolic/test/runtime_test",
  "crates/libafl_core",
  "crates/libafl_derive",
  "crates/libafl_frida",
  "crates/libafl_intelpt",
  "crates/libafl_libfuzzer",
  "crates/libafl_nyx",
  "crates/libafl_qemu",
  "crates/libafl_qemu/libafl_qemu_build",
  "crates/libafl_qemu/libafl_qemu_runner",
  "crates/libafl_qemu/libafl_qemu_sys",
  "crates/libafl_qemu/libvharness_sys",
  "crates/libafl_sugar",
  "crates/libafl_targets",
  "crates/libafl_tinyinst",
  "crates/libafl_unicorn",
  "crates/libafl",
  "crates/ll_mp",
  "crates/minibsod",
  "crates/no_std_time",
  "crates/ownedref",
  "crates/serde_anymap",
  "crates/shmem_providers",
  "crates/tuple_list_ex",
  "utils/build_and_test_fuzzers",
  "utils/ci_runner",
  "utils/ci_splitter",
  "utils/deexit",
  "utils/drcov_utils",
  "utils/gramatron/construct_automata",
  "utils/libafl_benches",
  "utils/libafl_jumper",
]

default-members = [
  "crates/libafl_bolts",
  "crates/libafl_cc",
  "crates/libafl_derive",
  "crates/libafl_targets",
  "crates/libafl",
]

exclude = [
  "bindings/pylibafl",
  "crates/libafl_libfuzzer_runtime",
  "docs",
  "fuzzers",
  "scripts",
  "utils/gdb_qemu",
  "utils/libafl_repo_tools",
  "utils/multi_machine_generator",
  "utils/noaslr",
  # additional crates
  "crates/libafl_concolic/test/symcc/util/symcc_fuzzing_helper",
]

[workspace.package]
version = "0.16.0"
license = "MIT OR Apache-2.0"
repository = "https://github.com/AFLplusplus/LibAFL/"
readme = "./README.md"

[workspace.dependencies]
# Internal deps
build_id2 = { path = "./crates/build_id2", version = "0.16.0", default-features = false }
core_affinity2 = { path = "./crates/core_affinity2", version = "0.16.0", default-features = false }
exceptional = { path = "./crates/exceptional", version = "0.16.0", default-features = false }
fast_rands = { path = "./crates/fast_rands", version = "0.16.0", default-features = false }
libafl = { path = "./crates/libafl", version = "0.16.0", default-features = false }
libafl_bolts = { path = "./crates/libafl_bolts", version = "0.16.0", default-features = false }
libafl_cc = { path = "./crates/libafl_cc", version = "0.16.0", default-features = false }
libafl_core = { path = "./crates/libafl_core", version = "0.16.0", default-features = false }
libafl_derive = { path = "./crates/libafl_derive", version = "0.16.0", default-features = false }
libafl_frida = { path = "./crates/libafl_frida", version = "0.16.0", default-features = false }
libafl_intelpt = { path = "./crates/libafl_intelpt", version = "0.16.0", default-features = false }
libafl_libfuzzer = { path = "./crates/libafl_libfuzzer", version = "0.16.0", default-features = false }
libafl_nyx = { path = "./crates/libafl_nyx", version = "0.16.0", default-features = false }
libafl_qemu = { path = "./crates/libafl_qemu", version = "0.16.0", default-features = false }
libafl_qemu_build = { path = "./crates/libafl_qemu/libafl_qemu_build", version = "0.16.0", default-features = false }
libafl_qemu_sys = { path = "./crates/libafl_qemu/libafl_qemu_sys", version = "0.16.0", default-features = false }
libafl_sugar = { path = "./crates/libafl_sugar", version = "0.16.0", default-features = false }
libafl_targets = { path = "./crates/libafl_targets", version = "0.16.0", default-features = false }
libafl_tinyinst = { path = "./crates/libafl_tinyinst", version = "0.16.0", default-features = false }
ll_mp = { path = "./crates/ll_mp", version = "0.16.0", default-features = false }
minibsod = { path = "./crates/minibsod", version = "0.16.0", default-features = false }
no_std_time = { path = "./crates/no_std_time", version = "0.16.0", default-features = false }
ownedref = { path = "./crates/ownedref", version = "0.16.0", default-features = false }
serde_anymap = { path = "./crates/serde_anymap", version = "0.16.0", default-features = false }
shmem_providers = { path = "./crates/shmem_providers", version = "0.16.0", default-features = false }
tuple_list_ex = { path = "./crates/tuple_list_ex", version = "0.16.0", default-features = false }

# Concolic fuzzing crates
dump_constraints = { path = "./crates/libafl_concolic/test/dump_constraints", version = "0.16.0", default-features = false }
runtime_test = { path = "./crates/libafl_concolic/test/runtime_test", version = "0.16.0", default-features = false }
symcc_libafl = { path = "./crates/libafl_concolic/symcc_libafl", version = "0.16.0", default-features = false }
symcc_runtime = { path = "./crates/libafl_concolic/symcc_runtime", version = "0.16.0", default-features = false }

# Utils
build_and_test_fuzzers = { path = "./utils/build_and_test_fuzzers", version = "0.16.0", default-features = false }
construct_automata = { path = "./utils/gramatron/construct_automata", version = "0.16.0", default-features = false }
deexit = { path = "./utils/deexit", version = "0.16.0", default-features = false }
drcov_utils = { path = "./utils/drcov_utils", version = "0.16.0", default-features = false }
libafl_benches = { path = "./utils/libafl_benches", version = "0.16.0", default-features = false }
libafl_jumper = { path = "./utils/libafl_jumper", version = "0.16.0", default-features = false }

# External deps
ahash = { version = "0.8.12", default-features = false } # The hash function already used in hashbrown
arbitrary-int = "2.0.0" # arbitrary sized integers, useful in combination with bitfields (bitbybit crate)
backtrace = { version = "0.3.74", default-features = false } # Used to get the stacktrace in StacktraceObserver
bindgen = "0.72.1"
bitbybit = "1.4.0" # bitfields, use this for bit fields and bit enums
capstone = "0.13.0" # Disassembler used in libafl_unicorn to provide disassembly on crash
clap = "4.5.49"
cc = "1.2.40"
cmake = "0.1.54"
ctor = "0.4.0"
document-features = "0.2.11"
erased-serde = { version = "0.4.5", default-features = false } # erased serde
fastbloom = { version = "0.14.0", default-features = false }
fs2 = "0.4.3" # Used by OnDisk Corpus for file locking
hashbrown = { version = "0.16.0", default-features = false } # A faster hashmap, nostd compatible
just = "=1.40.0"
libc = "0.2.177" # For (*nix) libc
libipt = { version = "0.4.0", features = ["libipt_master"] }
libvharness_sys = { path = "./crates/libafl_qemu/libvharness_sys", version = "0.16.0", default-features = false }
log = "0.4.28"
meminterval = "0.4.2"
mimalloc = { version = "0.1.48", default-features = false }
nix = { version = "0.30.1", default-features = false }
num_enum = { version = "0.7.4", default-features = false }
num-traits = { version = "0.2.19", default-features = false }
paste = "1.0.15"
postcard = { version = "1.1.3", features = [
  "alloc",
], default-features = false } # no_std compatible serde serialization format
pyo3 = { version = "0.26.0", features = ["auto-initialize"] }
pyo3-build-config = "0.26.0"
rangemap = "1.6.0"
regex = "1.12.2"
rustversion = "1.0.22"
serde = { version = "1.0.228", default-features = false } # serialization lib
serde_json = { version = "1.0.145", default-features = false }
serde_yaml = { version = "0.9.34" } # For parsing the injections yaml file
serial_test = { version = "3.2.0", default-features = false }
static_assertions = "1.1.0"
strum = "0.27.2"
strum_macros = "0.27.2"
toml = "0.9.7" # For parsing the injections toml file
tuple_list = { version = "0.1.3" }
typed-builder = "0.22.0" # Implement the builder pattern at compiletime
typeid = "1.0.3" # Safe type_eq that doesn't rely on std specialization
unicorn-engine = "2.0.1" # Used in libafl_unicorn
uuid = { version = "1.18.1", features = ["serde", "v4"] }
which = "8.0.0"
windows = "0.62.1"
windows-core = "0.62.1"
z3 = { version = "0.19.2", default-features = false }

[workspace.lints.rust]
# Deny
warnings = { level = "deny", priority = -1 }

# Forbid
unexpected_cfgs = "forbid"

# Allow
incomplete_features = "allow"
# ambiguous_glob_reexports = "allow"


[workspace.lints.clippy]
# Deny
all = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
cargo_common_metadata = "deny"

alloc_instead_of_core = "deny"
std_instead_of_alloc = "deny"
std_instead_of_core = "deny"

# Warn
cargo = { level = "warn", priority = -1 }

# Allow
cast_possible_truncation = "allow"
comparison_chain = "allow"          # This lint makes **ZERO** sense
missing_errors_doc = "allow"
missing_panics_doc = "allow"
module_name_repetitions = "allow"
multiple_crate_versions = "allow"   # TODO: turn into `warn` when working
negative_feature_names = "allow"    # TODO: turn into 'warn' when working
ptr_as_ptr = "allow"
similar_names = "allow"
struct_field_names = "allow"        # ????
too_many_lines = "allow"
type_repetition_in_bounds = "allow"
unreadable_literal = "allow"
unsafe_derive_deserialize = "allow"
used_underscore_binding = "allow"

[workspace.lints.rustdoc]
# Deny
broken_intra_doc_links = "deny"


[profile.release]
lto = true
codegen-units = 1
opt-level = 3
debug = true
