[package]
name = "afl"
version = "0.1.0"
authors = ["Dominik Maier <domenukk@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
criterion = "0.3" # Benchmarking

[[bench]]
name = "rand_speeds"
harness = false

[features]
default = ["std"]
std = []

[dependencies]
hashbrown =  { version = "0.9", features = ["serde"] } # A faster hashmap, nostd compatible
libc = "0.2" # For (*nix) libc
num = "*"
xxhash-rust = { version = "0.8.0-beta.5", features = ["const_xxh3"] } # xxh3 hashing for rust
serde = { version = "1.0", default-features = false, features = ["alloc"] } # serialization lib
typetag = "0.1"
postcard = "0.5.1" # no_std compatible serde serialization fromat